# data-either3

./: .travis.yml  CHANGELOG  LICENSE  README  README.md  data-either3.cabal  either3.cabal
src/Data/: Either3.hs
