-- Copyright   : (C) Keera Studios Ltd, 2013
-- License     : BSD3
-- Maintainer  : support@keera.co.uk
Name:                data-either3
Version:             0.1.1
Synopsis:            A version of Data.Either with 3 arguments.
Homepage:            http://keera.co.uk/blog/community
License:             BSD3
License-file:        LICENSE
Author:              Ivan Perez
Maintainer:          support@keera.co.uk
Stability:           Experimental

Category:            Data

Build-type:          Simple

cabal-version: >= 1.10


Library
  default-language: Haskell2010

  hs-source-dirs: src/

  Exposed-modules: Data.Either3

  Build-depends: base >= 4


-- You can disable the hlint test suite with -f-test-hlint
flag test-hlint
  default: False
  manual: True

-- You can disable the haddock coverage test suite with -f-test-doc-coverage
flag test-doc-coverage
  default: False
  manual: True

test-suite hlint
  type: exitcode-stdio-1.0
  main-is: hlint.hs
  hs-source-dirs: tests
  if !flag(test-hlint)
    buildable: False
  else
    build-depends:
      base,
      hlint >= 1.7

-- Verify that the code is thoroughly documented
test-suite haddock-coverage
  type: exitcode-stdio-1.0
  main-is: HaddockCoverage.hs
  ghc-options: -Wall
  hs-source-dirs: tests

  if !flag(test-doc-coverage)
    buildable: False
  else
    build-depends:
      base >= 4 && < 5,
      directory,
      filepath,
      process,
      regex-posix
