-- Copyright   : (C) Keera Studios Ltd, 2013
-- License     : BSD3
-- Maintainer  : support@keera.co.uk
name:                data-either3
version:             0.1.1
synopsis:            A version of Data.Either with 3 arguments.
homepage:            http://keera.co.uk/blog/community
license:             BSD3
license-file:        LICENSE
author:              Ivan Perez
maintainer:          support@keera.co.uk
stability:           Experimental

category:            Data

build-type:          Simple

cabal-version: >= 1.10


library
  default-language: Haskell2010

  hs-source-dirs: src/

  exposed-modules: Data.Either3

  build-depends: base >= 4


-- You can disable the hlint test suite with -f-test-hlint
flag test-hlint
  default: False
  manual: True

-- You can disable the haddock coverage test suite with -f-test-doc-coverage
flag test-doc-coverage
  default: False
  manual: True

test-suite hlint
  type: exitcode-stdio-1.0
  main-is: hlint.hs
  hs-source-dirs: tests
  if !flag(test-hlint)
    buildable: False
  else
    build-depends:
      base,
      hlint >= 1.7

-- Verify that the code is thoroughly documented
test-suite haddock-coverage
  type: exitcode-stdio-1.0
  main-is: HaddockCoverage.hs
  ghc-options: -Wall
  hs-source-dirs: tests

  if !flag(test-doc-coverage)
    buildable: False
  else
    build-depends:
      base >= 4 && < 5,
      directory,
      filepath,
      process,
      regex-posix
