-- Copyright   : (C) Keera Studios Ltd, 2013
-- License     : BSD3
-- Maintainer  : support@keera.co.uk

cabal-version: >= 1.10
build-type:          Simple

name:                data-either3
version:             0.1.1
author:              Ivan Perez
maintainer:          support@keera.co.uk
homepage:            http://keera.co.uk/blog/community
license:             BSD3
license-file:        LICENSE
category:            Data
synopsis:            A version of Data.Either with 3 arguments.
stability:           Experimental


-- You can disable the hlint test suite with -f-test-hlint
flag test-hlint
  default: False
  manual: True

-- You can disable the haddock coverage test suite with -f-test-doc-coverage
flag test-doc-coverage
  default: False
  manual: True


library

  exposed-modules:
    Data.Either3

  build-depends:
    base >= 4

  default-language:
    Haskell2010

  hs-source-dirs:
    src/


test-suite hlint

  type:
    exitcode-stdio-1.0

  main-is:
    hlint.hs

  hs-source-dirs:
    tests

  if !flag(test-hlint)
    buildable:
      False
  else
    build-depends:
      base,
      hlint >= 1.7

-- Verify that the code is thoroughly documented
test-suite haddock-coverage

  type:
    exitcode-stdio-1.0

  main-is:
    HaddockCoverage.hs

  hs-source-dirs:
    tests

  ghc-options:
    -Wall

  if !flag(test-doc-coverage)
    buildable:
      False
  else
    build-depends:
      base >= 4 && < 5,
      directory,
      filepath,
      process,
      regex-posix
